--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "postcss-loader": "^6.1.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "webpack-dev-server": "^4.2.1",
+    "webpack-md5-hash": "^0.0.6"
   },
   "dependencies": {
-    "core-js": "^3.18.0"
+    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.4.1"
   }
 }
